5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1760_1576.log
== TEST (2019-05-22 19:15:08) 
-- CODE:
from numpy import*
j1 = erray(eval(input("eusapia: ")))
j2 = erray(eval(input("barsanulfo: ")))
if(j1 == j2):
print("Empate")
elif(((j1 == "pedra") and(j2 == "tesoura")) or((j1 == "papel") and(j2 == "pedra")) or((j1 == "tesoura") and(j2 == "papel"))):
print("Jogador 1 ganhou.")
else:
print("Jogador 2 ganhou.")
-- ERROR:
File "XXXX", line 5
    print("Empate")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:15:21) 
-- CODE:
from numpy import*
j1 = erray(eval(input("eusapia: ")))
j2 = erray(eval(input("barsanulfo: ")))
if(j1 == j2):
	print("Empate")
elif(((j1 == "pedra") and(j2 == "tesoura")) or((j1 == "papel") and(j2 == "pedra")) or((j1 == "tesoura") and(j2 == "papel"))):
print("Jogador 1 ganhou.")
else:
print("Jogador 2 ganhou.")
-- ERROR:
File "XXXX", line 7
    print("Jogador 1 ganhou.")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:15:25) 
-- CODE:
from numpy import*
j1 = erray(eval(input("eusapia: ")))
j2 = erray(eval(input("barsanulfo: ")))
if(j1 == j2):
	print("Empate")
elif(((j1 == "pedra") and(j2 == "tesoura")) or((j1 == "papel") and(j2 == "pedra")) or((j1 == "tesoura") and(j2 == "papel"))):
	print("Jogador 1 ganhou.")
else:
print("Jogador 2 ganhou.")
-- ERROR:
File "XXXX", line 9
    print("Jogador 2 ganhou.")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:15:28) 
-- CODE:
from numpy import*
j1 = erray(eval(input("eusapia: ")))
j2 = erray(eval(input("barsanulfo: ")))
if(j1 == j2):
	print("Empate")
elif(((j1 == "pedra") and(j2 == "tesoura")) or((j1 == "papel") and(j2 == "pedra")) or((j1 == "tesoura") and(j2 == "papel"))):
	print("Jogador 1 ganhou.")
else:
	print("Jogador 2 ganhou.")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:15:39) 
-- CODE:
from numpy import*
j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
if(j1 == j2):
	print("Empate")
elif(((j1 == "pedra") and(j2 == "tesoura")) or((j1 == "papel") and(j2 == "pedra")) or((j1 == "tesoura") and(j2 == "papel"))):
	print("Jogador 1 ganhou.")
else:
	print("Jogador 2 ganhou.")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:26:52) 
-- CODE:
from numpy import*
cont=0
j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
while(j1 and j2 > 0):

-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:27:10) 
-- CODE:
from numpy import*
cont=0
j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
while(j1 and j2 > 0):
print(1)
-- ERROR:
File "XXXX", line 6
    print(1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:27:16) 
-- CODE:
from numpy import*
cont=0
j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
while(j1 and j2 > 0):
print(1)
-- ERROR:
File "XXXX", line 6
    print(1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:59) 
-- CODE:
from numpy import*
cont=0
j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
while(j1 and j2 > 0):
	if(j1==11) and (j1==22) and (j1==33) and (j2==11) and (j2==22) and (j2==33):
		print(size(j1))
		print("empate")
	elif(j1==11) and (j2==22):
		print(size(j1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:07) 
-- CODE:
from numpy import*
cont=0
j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
while(cont>0):
	if(j1==11) and (j1==22) and (j1==33) and (j2==11) and (j2==22) and (j2==33):
		print(size(j1))
		print("empate")
	elif(j1==11) and (j2==22):
		print(size(j1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:21) 
-- CODE:
from numpy import*
cont=0
j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
while(cont>0):
	if(j1==11) and (j1==22) and (j1==33) and (j2==11) and (j2==22) and (j2==33):
		print(size(j1))
		print("empate")
	elif(j1==11) and (j2==22):
		print(size(j1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:46) 
-- CODE:
from numpy import*
cont=0
j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
while(j1>0):
	if(j1==11) and (j1==22) and (j1==33) and (j2==11) and (j2==22) and (j2==33):
		print(size(j1))
		print("empate")
	elif(j1==11) and (j2==22):
		print(size(j1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:02:52) 
-- CODE:
from numpy import*

j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(j1)):
	if((j1[i]==11))and((j2[i]==22)):
		cb=cb+1
	elif((j1[i]==11)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==11)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==33)and(j2[i]==11)):
		cb=cb+1
	elif((j1[i]==33)and(j2[i]==22)):
		ce=ce+1
	elif((j1[i]==j2[i])):
		ce=ce+0
		cb=cb+0
	i=i+1
print(size(j1))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:03:33) 
-- CODE:
from numpy import*

j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(j1)):
	if((j1[i]==11))and((j2[i]==22)):
		cb=cb+1
	elif((j1[i]==11)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==11)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==33)and(j2[i]==11)):
		cb=cb+1
	elif((j1[i]==33)and(j2[i]==22)):
		ce=ce+1
	elif((j1[i]==j2[i])):
		ce=ce+0
		cb=cb+0
	i=i+1
print(size(j1))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- EXECUTION TIME:
0.56017
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:04:21) 
-- CODE:
from numpy import*

j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(j1)):
	if((j1[i]==11))and((j2[i]==22)):
		cb=cb+1
	elif((j1[i]==11)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==11)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==33)and(j2[i]==11)):
		cb=cb+1
	elif((j1[i]==33)and(j2[i]==22)):
		ce=ce+1
	elif((j1[i]==j2[i])):
		ce=ce+0
		cb=cb+0
	i=i+1
print((size(j1))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- EXECUTION TIME:
0.13649
-- ERROR:
  File "/home/codebench/codes/1760/1576/main.py", line 27
    if(ce>cb):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:04:26) 
-- CODE:
from numpy import*

j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(j1)):
	if((j1[i]==11))and((j2[i]==22)):
		cb=cb+1
	elif((j1[i]==11)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==11)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==33)and(j2[i]==11)):
		cb=cb+1
	elif((j1[i]==33)and(j2[i]==22)):
		ce=ce+1
	elif((j1[i]==j2[i])):
		ce=ce+0
		cb=cb+0
	i=i+1
print((size(j1))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- EXECUTION TIME:
0.142883
-- ERROR:
  File "/home/codebench/codes/1760/1576/main.py", line 27
    if(ce>cb):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:04:28) 
-- CODE:
from numpy import*

j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(j1)):
	if((j1[i]==11))and((j2[i]==22)):
		cb=cb+1
	elif((j1[i]==11)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==11)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==33)and(j2[i]==11)):
		cb=cb+1
	elif((j1[i]==33)and(j2[i]==22)):
		ce=ce+1
	elif((j1[i]==j2[i])):
		ce=ce+0
		cb=cb+0
	i=i+1
print((size(j1))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
File "XXXX", line 27
    if(ce>cb):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:05:16) 
-- CODE:
from numpy import*

j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(j1)):
	if((j1[i]==11))and((j2[i]==22)):
		cb=cb+1
	elif((j1[i]==11)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==11)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==33)and(j2[i]==11)):
		cb=cb+1
	elif((j1[i]==33)and(j2[i]==22)):
		ce=ce+1
	elif((j1[i]==j2[i])):
		ce=ce+0
		cb=cb+0
	i=i+1
print((size(j1))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
File "XXXX", line 27
    if(ce>cb):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:05:52) 
-- CODE:
from numpy import*

j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(j1)):
	if((j1[i]==11))and((j2[i]==22)):
		cb=cb+1
	elif((j1[i]==11)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==11)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==33)and(j2[i]==11)):
		cb=cb+1
	elif((j1[i]==33)and(j2[i]==22)):
		ce=ce+1
	elif((j1[i]==j2[i])):
		ce=ce+0
		cb=cb+0
	i=i+1
print((size(j1))
if((ce)>(cb)):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
File "XXXX", line 27
    if((ce)>(cb)):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:06:38) 
-- CODE:
from numpy import*

j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(j1)):
	if((j1[i]==11))and((j2[i]==22)):
		cb=cb+1
	elif((j1[i]==11)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==11)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==33)and(j2[i]==11)):
		cb=cb+1
	elif((j1[i]==33)and(j2[i]==22)):
		ce=ce+1
	elif((j1[i]==j2[i])):
		ce=ce+0
		cb=cb+0
	i=i+1
print((size(j1))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
File "XXXX", line 27
    if(ce>cb):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:06:55) 
-- CODE:
from numpy import*

j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(j1)):
	if((j1[i]==11))and((j2[i]==22)):
		cb=cb+1
	elif((j1[i]==11)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==11)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==33)and(j2[i]==11)):
		cb=cb+1
	elif((j1[i]==33)and(j2[i]==22)):
		ce=ce+1
	elif((j1[i]==j2[i])):
		ce=ce+0
		cb=cb+0
	i=i+1
print(size(j1))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:07:11) 
-- CODE:
from numpy import*

j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
i=0
ce=0
cb=0

while(i<size(j1)):
	if((j1[i]==11))and((j2[i]==22)):
		cb=cb+1
	elif((j1[i]==11)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==11)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==33)and(j2[i]==11)):
		cb=cb+1
	elif((j1[i]==33)and(j2[i]==22)):
		ce=ce+1
	elif((j1[i]==j2[i])):
		ce=ce+0
		cb=cb+0
	i=i+1
print(size(j1))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- EXECUTION TIME:
0.500329
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:08:01) 
-- CODE:
from numpy import*

j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
i=0
ce=0
cb=0

while((i<size(j1)):
	if((j1[i]==11)and(j2[i]==22)):
		cb=cb+1
	elif((j1[i]==11)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==11)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==33)and(j2[i]==11)):
		cb=cb+1
	elif((j1[i]==33)and(j2[i]==22)):
		ce=ce+1
	elif(j1[i]==j2[i]):
		ce=ce+0
		cb=cb+0
	i=i+1
print(size(j1))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
File "XXXX", line 9
    while((i<size(j1)):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:08:32) 
-- CODE:
from numpy import*

j1 = array(eval(input("eusapia: ")))
j2 = array(eval(input("barsanulfo: ")))
i=0
ce=0
cb=0

while(i<(size(j1)):
	if((j1[i]==11)and(j2[i]==22)):
		cb=cb+1
	elif((j1[i]==11)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==11)):
		ce=ce+1
	elif((j1[i]==22)and(j2[i]==33)):
		ce=ce+1
	elif((j1[i]==33)and(j2[i]==11)):
		cb=cb+1
	elif((j1[i]==33)and(j2[i]==22)):
		ce=ce+1
	elif(j1[i]==j2[i]):
		ce=ce+0
		cb=cb+0
	i=i+1
print(size(j1))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
File "XXXX", line 9
    while(i<(size(j1)):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:07:12) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a) or i <size(b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a))
if(ca > cb):
		print("eusapia".upper())
elif(cb > ca):
		print("barsanulfo".upper())
else:
		print("empate".upper()
		
-- EXECUTION TIME:
0.88457
-- ERROR:
  File "/home/codebench/codes/1760/1576/main.py", line 33
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:07:17) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a) or i <size(b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a))
if(ca > cb):
		print("eusapia".upper())
elif(cb > ca):
		print("barsanulfo".upper())
else:
		print("empate".upper()
		
-- EXECUTION TIME:
0.865767
-- ERROR:
  File "/home/codebench/codes/1760/1576/main.py", line 33
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:07:24) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a) or i <size(b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a))
if(ca > cb):
		print("eusapia".upper())
elif(cb > ca):
		print("barsanulfo".upper())
else:
		print("empate".upper()
		
-- EXECUTION TIME:
0.753597
-- ERROR:
  File "/home/codebench/codes/1760/1576/main.py", line 33
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:07:35) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a) or i <size(b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a))
if(ca > cb):
		print("eusapia".upper())
elif(cb > ca):
		print("barsanulfo".upper())
else:
		print("empate".upper())
		
-- EXECUTION TIME:
0.95238
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
sequencia: sequencia: 10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
sequencia: sequencia: 18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:07:42) 
-- CODE:
from numpy import*
#entradas 11=pedra, 22=papel e 33=tesoura
a = array(eval(input("sequencia: ")))
b = array(eval(input("sequencia: ")))
i = 0
ca = 0
cb = 0
while(i < size(a) or i <size(b)):
	if((a[i] == 11) and (b[i] == 22)):
		cb = cb + 1
	elif((a[i] == 11) and (b[i] == 33)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 11)):
		ca = ca + 1
	elif((a[i] == 22) and (b[i] == 33)):
		cb = cb + 1
	elif((a[i] == 33) and (b[i] == 22)):
		ca = ca + 1
	elif((a[i] == 33) and (b[i] == 11)):
		cb = cb + 1
	elif(a[i] == b[i]):
		ca = ca + 0
		cb = cb + 0
	i = i + 1
print(size(a))
if(ca > cb):
		print("eusapia".upper())
elif(cb > ca):
		print("barsanulfo".upper())
else:
		print("empate".upper())
		
-- EXECUTION TIME:
0.96513
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
